src/styles/scss/main.scss
/* ... */
.cta-call-wrapper .cta-button .pricing-text {
  color: $white;
  font-family: "DM Sans";
  font-size: 15px;
  display: inline-block;
  font-weight: 900;
}
.cta-call-wrapper .cta-button .pricing-text i {
  margin-left: 10px;
}
.cta-call-wrapper .carton-shape {
  position: absolute;
  bottom: -50px;
  right: 0;
}
.cta-call-wrapper .book-shape {
  position: absolute;
  top: 40%;
  left: 0;
}

.cta-support-bg-style {
  position: relative;
  z-index: 9;
}
.cta-support-bg-style::before {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  width: 100%;
  height: 100%;
  content: "";
  background-color: #fff9ed;
  z-index: -1;
  height: 50%;
}

.cta-section-4 {
  background-attachment: fixed;
}

.testimonial-box-items {
  margin-top: 30px;
}
.testimonial-box-items .testimonial-box {
  background-color: $white;
  border: 1px;
  border-color: rgba(0, 53, 102, 0.12);
  padding: 30px;
  border: 1px solid rgba(0, 53, 102, 0.12);
  border-radius: 14px;
}
.testimonial-box-items .testimonial-box .star-box-items {
  display: flex;
  justify-content: space-between;
}
.testimonial-box-items .testimonial-box .star-box-items .star {
  color: #f0bf11;
}
.testimonial-box-items .testimonial-box p {
  margin-top: 20px;
}
.testimonial-box-items .client-info {
  display: flex;
  gap: 20px;
  align-items: center;
  margin-top: 30px;
}
.testimonial-box-items.style-2 .client-info {
  margin-top: 0;
  margin-bottom: 30px;
}

.testimonial-section-2 {
  position: relative;
  margin-top: 20px;
  background-attachment: fixed;
}

.testimonial-box-items-2 {
  border-radius: 0px 0px 5px 5px;
  background: #1c1c1c;
  padding: 70px;
  position: relative;
  border-top: 5px solid $theme-color-2;
  margin-top: -30px;
}

.testimonial-box-items-2 .star {
  color: #f0bf11;
  margin-top: 20px;
}
.testimonial-box-items-2 h4 {
  font-weight: 600;
  font-size: 28px;
  margin-top: 20px;
}

.testimonial-box-items-2 .client-info {
  display: flex;
  gap: 20px;
  align-items: center;
  margin-top: 30px;
}
.testimonial-box-items-2 .google-logo {
  position: absolute;
  bottom: 85px;
  right: 70px;
}

.testimonial-box-card-items {
  border: 1px solid rgba(255, 255, 255, 0.09);
  background: #0e1445;
  padding: 45px 30px;
  border-top: 3px solid $theme-color-2;
  text-align: center;
  margin-top: 30px;
}
.testimonial-box-card-items .star {
  color: #f0bf11;
}
.testimonial-box-card-items h3 {
  font-size: 23px;
  color: $white;
  margin-top: 20px;
}

.testimonial-box-5 {
  position: relative;
  text-align: center;
  margin-top: 30px;
  padding-bottom: 60px;
  padding-left: 20px;
  padding-right: 20px;
}
.testimonial-box-5::before {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  width: 100%;
  height: 100%;
  content: "";
  border-radius: 10px;
  background: #f8f8f8;
  top: 60px;
  height: initial;
  z-index: -1;
}
.testimonial-box-5 .testimonial-content {
  max-width: 702px;
  margin: 0 auto;
  text-align: center;
}
.testimonial-box-5 .testimonial-content h4 {
  font-size: 24px;
  font-weight: 500;
  color: #59647e;
  margin-top: 40px;
}

.testimonial-box-5 .testimonial-content .clinet-info {
  display: flex;
  justify-content: center;
  gap: 30px;
  margin-top: 40px;
}

.testimonial-section-5 {
  position: relative;
}
.testimonial-section-5 .swiper {
  padding: 10px;
}
.testimonial-section-5 .testimonial-shape-1 {
  position: absolute;
  top: 321px;
  left: 64px;
}

.testimonial-section-5 .testimonial-shape-2 {
  position: absolute;
  top: 270px;
  right: 20px;
}

.testimonial-section-5 .testimonial-shape-3 {
  position: absolute;
  bottom: 100px;
  left: 80px;
}

.testimonial-section-5 .testimonial-shape-4 {
  position: absolute;
  bottom: 0px;
  right: 310px;
  z-index: 2;
}

.testimonial-section-5 .array-button {
  display: flex;
  align-items: center;
  justify-content: space-between;
  top: 65%;
  left: 20%;
  right: 20%;
  transform: translateY(-50%);
  position: absolute;
  z-index: 9;
}

.testimonial-section-5 .array-button .array-prev {
  background-color: $theme-color-2;
  color: $white;
}
.testimonial-section-5 .array-button .array-prev:hover {
  background-color: $header;
}
.testimonial-section-5 .array-button .array-next {
  background: $white;
  box-shadow: 10px 8px 34px 16px rgba(10, 3, 46, 0.05);
}
.testimonial-section-5 .array-button .array-next:hover {
  background-color: $theme-color-2;
  color: $white;
}

.testimonial-wrapper-6 {
  position: relative;
}
.testimonial-wrapper-6 .testimonial-left-items {
  border-radius: 34px;
  background: linear-gradient(90deg, #fe7111 0%, #fe9026 100%);
  padding: 50px 46px;
  text-align: center;
  margin-top: 30px;
}
.testimonial-wrapper-6 .testimonial-left-items .testimonial-content h2 {
  font-size: 72px;
  font-weight: 600;
  color: $white;
}
.testimonial-wrapper-6 .testimonial-left-items .testimonial-content .star {
  color: $white;
  margin-top: 15px;
}
.testimonial-wrapper-6 .testimonial-left-items .testimonial-content h5 {
  color: $white;
  margin-top: 5px;
  margin-bottom: 20px;
}
.testimonial-wrapper-6 .testimonial-left-items .testimonial-content h4 {
  font-size: 24px;
  font-weight: 600;
  border-top: 1px dashed $white;
  padding-top: 20px;
  color: $white;
}
.testimonial-wrapper-6 .testimonial-left-items .client-info {
  margin-top: 30px;
}
.testimonial-wrapper-6 .testimonial-box-6 {
  margin-left: 60px;
}

.testimonial-wrapper-6 .testimonial-box-6 .star-box-items {
  display: flex;
  justify-content: space-between;
}
.testimonial-wrapper-6 .testimonial-box-6 .star-box-items .star {
  color: $theme-color-2;
}
.testimonial-wrapper-6 .testimonial-box-6 p {
  font-size: 24px;
  font-weight: 500;
  margin-top: 40px;
  line-height: 167%;
}

.testimonial-wrapper-6 .testimonial-box-6 .client-info {
  display: flex;
  gap: 20px;
  align-items: center;
  margin-top: 60px;
}
.testimonial-wrapper-6 .swiper-dot3 {
  position: absolute;
  bottom: 0;
  right: 0;
  z-index: 99;
  text-align: right;
}
/* ... */

